--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Comming Soon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<link rel="stylesheet" href="themes/blue_flare.css">
 	<script src="main.js"></script>
 </head>
 <body>
