Remoção do alvo de âncoras ao sair do menu de opções
Alteração do botão de sair de <buttom> para <a>

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						</section>
 					</section>
 					<div>
-						<button id="btn_exit_config">&times;</button>
+						<a href="#" id="btn_exit_config">&times;</a>
 						<span>Esc</span>
 					</div>
 				</div>
