Adicionado links da EPiC e ícones do FontAwesome

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Comming Soon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 	<link rel="stylesheet" href="themes/blue_flare.css">
+	
 	<script src="main.js"></script>
 </head>
 <body>
@@ -24,6 +27,13 @@
 						<a>Atalhos</a>
 						<hr />
 						<a>Tema</a>
+						<hr />
+						<div id="our-media">
+							<a href="http://epic.ufscar.site" target="_blank"><i class="fas fa-globe fa-lg fa-fw"></i></a>
+							<a href="https://www.facebook.com/epicufscar" target="_blank"><i class="fab fa-facebook fa-lg fa-fw"></i></a>
+							<a href="https://www.linkedin.com/company/epic-ufscar/" target="_blank"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
+							<a href="https://github.com/epicufscar" target="_blank"><i class="fab fa-github-square fa-lg fa-fw"></i></a>
+						</div>
 					</nav>
 
 					<section>
