--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<h6 id="h_org"></h6>
 		<h1 id="h_title"></h1>
 		<span id="s_count"></span>
-		<button id="btn_open_config">&#9965;</button>
+		<button id="btn_open_config"><i class="fas fa-cog fa-spin"></i></button>
 	</main>
 	<script src="https://www.youtube.com/iframe_api" async></script>
 </body>
