Reordenado menu de navegação

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 			<section>
 				<div class="container">
 					<nav>
-						<span>Configurações</span>
+						<span>Configurações do evento</span>
 						<a href="#config_info">Informações</a>
 						<a href="#config_count">Contagem regressiva</a>
 						<a href="#config_song">Música</a>
-						<a>Atalhos</a>
-						<hr />
 						<a>Tema</a>
+						<hr />
+						<span>Configurações do site</span>
+						<a>Atalhos</a>
 						<hr />
 						<div id="our-media">
 							<a href="http://epic.ufscar.site" target="_blank"><i class="fas fa-globe fa-lg fa-fw"></i></a>
