Ícones dos links da EPiC não mais possuem a mesma largura

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 						<a href="#config_atal">Atalhos do teclado</a>
 						<hr />
 						<div id="our-media">
-							<a href="http://epic.ufscar.site" target="_blank"><i class="fas fa-globe fa-lg fa-fw"></i></a>
-							<a href="https://www.facebook.com/epicufscar" target="_blank"><i class="fab fa-facebook fa-lg fa-fw"></i></a>
-							<a href="https://www.linkedin.com/company/epic-ufscar/" target="_blank"><i class="fab fa-linkedin fa-lg fa-fw"></i></a>
-							<a href="https://github.com/epicufscar" target="_blank"><i class="fab fa-github-square fa-lg fa-fw"></i></a>
+							<a href="http://epic.ufscar.site" target="_blank"><i class="fas fa-globe fa-lg"></i></a>
+							<a href="https://www.facebook.com/epicufscar" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
+							<a href="https://www.linkedin.com/company/epic-ufscar/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+							<a href="https://github.com/epicufscar" target="_blank"><i class="fab fa-github-square fa-lg"></i></a>
 						</div>
 					</nav>
 
