Criado pasta scripts e styles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 	<link rel="stylesheet" href="themes/blue_flare.css">
 	
 	<script src="https://codepen.io/Alynva/pen/dQzgqp.js"></script>
 	<script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
-	<script src="main.js"></script>
-	<script src="hotkeys.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/hotkeys.js"></script>
 </head>
 <body>
 	<div id="player" tabindex="-1"></div>
