--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 	<link rel="stylesheet" href="themes/blue_flare.css">
 	
-	<script src="https://codepen.io/Alynva/pen/dQzgqp.js"></script>
 	<script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
 	<script src="scripts/main.js"></script>
+	<script src="scripts/keycodes.js"></script>
 	<script src="scripts/hotkeys.js"></script>
 </head>
 <body>
