#9 - Adicionado parte da galeria
Já é possível alternar entre temas (por enquanto só existe o Blue Flare, então só dá pra colocar ele e tirar ele), mas está dando erro no stylesheet do tema quando é carregado: "Unexpected token {"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-	<link rel="stylesheet" href="themes/blue_flare.css">
 	
 	<script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
 	<script src="scripts/main.js"></script>
@@ -104,6 +103,28 @@
 								<h1>Temas</h1>
 							</header>
 							<article>
+								<form id="fm_theme">
+									<label>
+										<input type="radio" name="theme" value="none" checked />
+										<img class="theme_preview" src="themes/none.png" alt="Nenhum tema">
+									</label>
+									<label>
+										<input type="radio" name="theme" value="blue_flare" />
+										<img class="theme_preview" src="themes/blue_flare/blue_flare.png" alt="Capa do tema Blue Flare">
+									</label>
+								</form>
+								<section>
+									<header>
+										<h2>Alterar tema</h2>
+										<p>Para alguns temas, você poderá alterar suas configurações
+											.</p>
+									</header>
+									<article>
+										<form id="fm_config_thema">
+											
+										</form>
+									</article>
+								</section>
 							</article>
 						</section>
 						<hr />
