[Rascunho] Seção melhorada de controle dos vídeos

--- a/index.html
+++ b/index.html
@@ -110,6 +110,40 @@
 										</section>
 									</fieldset>
 								</form>
+								<section id="playlist_details">
+									<header>
+										<h2>WS</h2>
+										<p>por <a href="#">EPiC UFSCar</a> e 1 outra pessoa - 1 / 60</p>
+										<hr />
+										<div id="playlist_constrols">
+											<button id="btn_playlist_random"><i class="fas fa-random"></i></button>
+											<button id="btn_playlist_prev"><i class="fas fa-step-backward"></i></button>
+											<button id="btn_playlist_play_pause"><i class="fas fa-play"></i></button>
+											<button id="btn_playlist_next"><i class="fas fa-step-forward"></i></button>
+											<button id="btn_playlist_repeat"><i class="fas fa-repeat"></i></button>
+										</div>
+									</header>
+									<article>
+										<ul>
+											<li>
+												<span>▶</span>
+												<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
+												<div>
+													<h3>Daft Punk</h3>
+													<span>djeevs</span>
+												</div>
+											</li>
+											<li>
+												<span>2</span>
+												<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
+												<div>
+													<h3>Gotta Be</h3>
+													<span>Roadrunner</span>
+												</div>
+											</li>
+										</ul>
+									</article>
+								</section>
 							</article>
 						</section>
 						<hr />
