Alterado nome do tema Flare

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 										<img class="theme_preview" src="themes/none.png" alt="Nenhum tema">
 									</label>
 									<label>
-										<input type="radio" name="theme" value="blue_flare" />
-										<img class="theme_preview" src="themes/blue_flare/blue_flare.png" alt="Capa do tema Blue Flare">
+										<input type="radio" name="theme" value="ss_flare" />
+										<img class="theme_preview" src="themes/ss_flare/ss_flare.png" alt="Capa do tema Blue Flare">
 									</label>
 								</form>
 								<section>
