--- a/index.html
+++ b/index.html
@@ -115,31 +115,35 @@
 										<h2>WS</h2>
 										<p>por <a href="#">EPiC UFSCar</a> e 1 outra pessoa - 1 / 60</p>
 										<hr />
-										<div id="playlist_constrols">
-											<button id="btn_playlist_random"><i class="fas fa-random"></i></button>
-											<button id="btn_playlist_prev"><i class="fas fa-step-backward"></i></button>
-											<button id="btn_playlist_play_pause"><i class="fas fa-play"></i></button>
-											<button id="btn_playlist_next"><i class="fas fa-step-forward"></i></button>
-											<button id="btn_playlist_repeat"><i class="fas fa-repeat"></i></button>
+										<div id="playlist_controls">
+											<button id="btn_playlist_random"><i class="fas fa-lg fa-random"></i></button>
+											<button id="btn_playlist_prev"><i class="fas fa-lg fa-step-backward"></i></button>
+											<button id="btn_playlist_play_pause"><i class="fas fa-lg fa-play"></i></button>
+											<button id="btn_playlist_next"><i class="fas fa-lg fa-step-forward"></i></button>
+											<button id="btn_playlist_repeat"><i class="fas fa-lg fa-repeat"></i></button>
 										</div>
 									</header>
 									<article>
 										<ul>
 											<li>
-												<span>▶</span>
-												<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
-												<div>
-													<h3>Daft Punk</h3>
-													<span>djeevs</span>
-												</div>
+												<a href="#">
+													<span>▶</span>
+													<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
+													<div>
+														<h3>Daft Punk</h3>
+														<span>djeevs</span>
+													</div>
+												</a>
 											</li>
 											<li>
-												<span>2</span>
-												<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
-												<div>
-													<h3>Gotta Be</h3>
-													<span>Roadrunner</span>
-												</div>
+												<a href="#">
+													<span>2</span>
+													<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
+													<div>
+														<h3>Gotta Be</h3>
+														<span>Roadrunner</span>
+													</div>
+												</a>
 											</li>
 										</ul>
 									</article>
