Resolved #11 - Feita as requisições do YT API
TODO: requisição por um vídeo específico
TODO: refatorar
TODO: ações nos botões de controle

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 										</section>
 									</fieldset>
 								</form>
-								<section id="playlist_details">
+								<section id="playlist_details" class="hide">
 									<header>
-										<h2>WS</h2>
-										<p>por <a href="#">EPiC UFSCar</a> e 1 outra pessoa - 1 / 60</p>
+										<h2></h2>
+										<p>por <a href="#" target="_blank"></a><span class="hide"> - <span></span> / <span></span></span></p>
 										<hr />
 										<div id="playlist_controls">
 											<button id="btn_playlist_random"><i class="fas fa-lg fa-random"></i></button>
@@ -123,29 +123,8 @@
 											<button id="btn_playlist_repeat"><i class="fas fa-lg fa-repeat"></i></button>
 										</div>
 									</header>
-									<article>
-										<ul>
-											<li>
-												<a href="#">
-													<span>▶</span>
-													<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
-													<div>
-														<h3>Daft Punk</h3>
-														<span>djeevs</span>
-													</div>
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<span>2</span>
-													<img src="https://i.ytimg.com/vi/h5EofwRzit0/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&rs=AOn4CLAJBut8d8AK9GEzeEYdJ8wrDwvNxA" alt="video thumbnail">
-													<div>
-														<h3>Gotta Be</h3>
-														<span>Roadrunner</span>
-													</div>
-												</a>
-											</li>
-										</ul>
+									<article class="hide">
+										<ul></ul>
 									</article>
 								</section>
 							</article>
