--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="scripts/main.js" async></script>
     <script src="scripts/keycodes.js"></script>
     <script src="scripts/hotkeys.js" async></script>
-    <script src="scripts/musica.js" async></script>
+    <script src="scripts/music.js" async></script>
 </head>
 
 <body>
