--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script defer src="./libs/fontawesome-5.6.3/js/all.min.js"></script>
     <script src="./libs/hotkeys/hotkeys.min.js"></script>
 
-    <script src="scripts/main.js" async></script>
-    <script src="scripts/keycodes.js"></script>
-    <script src="scripts/hotkeys.js" async></script>
-    <script src="scripts/music.js" async></script>
+    <script type="module" src="./scripts/main.js" async></script>
+    <script src="./scripts/keycodes.js"></script>
+    <!-- <script src="scripts/hotkeys.js" async></script> -->
+    <!-- <script src="scripts/music.js" async></script> -->
 </head>
 
 <body>
