--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <script defer src="./libs/fontawesome-5.6.3/js/all.min.js"></script>
     <script src="./libs/hotkeys/hotkeys.min.js"></script>
 
-    <script type="module" src="./scripts/main.js" async></script>
+    <script type="module" src="./scripts/main.js"></script>
     <script src="./scripts/keycodes.js"></script>
-    <!-- <script src="scripts/hotkeys.js" async></script> -->
-    <!-- <script src="scripts/music.js" async></script> -->
 </head>
 
 <body>
@@ -281,7 +279,7 @@
         <a id="a_hotpage" href="#"></a>
         <button id="btn_open_config"><i class="fas fa-cog fa-spin"></i></button>
     </main>
-    <script src="./libs/youtube/iframe_api.js" async></script>
+    <script src="./libs/youtube/iframe_api.js" defer></script>
 </body>
 
 </html>
